--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Deep Garbage
+email: deepgarbage@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Rooting through your data garbage.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
+url: "http://deepgarbage.info" # the base hostname & protocol for your site
+twitter_username: deepgarbage
 github_username:  jekyll
 
 # Build settings
