--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,11 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
+
+analytics :
+  provider : google
+  google : 
+      tracking_id : 'UA-62226777-1'
+  getclicky :
+    site_id :
+    
