--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://deepgarbage.info" # the base hostname & protocol for your site
 twitter_username: deepgarbage
-github_username:  jekyll
+#github_username:  Saganaut/yamissedout
 
 # Build settings
 markdown: kramdown
